--- a/package.json.in
+++ b/package.json.in
@@ -11,23 +11,24 @@ dnl
    },
    "devDependencies": {
       "@slimio/wcwidth": "^1.0.0",
-      "pngjs": "^7.0.0"
+      "pngjs": "^7.0.0",
+      "tailwindcss": "^4.1.18"
    },
    "contributes": {
       "configuration": {
          "type": "object",
          "properties": {
-include(`package/config.json')dnl
+include([[package/config.json]])dnl
          }
       },
       "commands": [
-include(`package/cmd.json')dnl
+include([[package/cmd.json]])dnl
       ],
       "menus": {
-include(`package/menu.json')dnl
+include([[package/menu.json]])dnl
       },
       "submenus": [
-include(`package/submenu.json')dnl
+include([[package/submenu.json]])dnl
       ]
    },
    "publisher": "barroit",
